# NovaSyntax

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_test.sh  configure.sh
.github/workflows/: c-cpp.yml
docs/: Accomplished.md  lexer_output_explanation.md
examples/: README.md  scientific_calculator.nova
include/: lexer.hpp
src/: main.cpp
src/lexer/: lexer.cpp
src/parser/: parser.cpp
tests/: lexer_test.cpp  parser_test.cpp
